--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>BCC</title>
 </head>
 <body>
     <Header>
         <h1>Lukasz Mauro . Sketches BCC</h1>
-        <h2>Hotmess</h2>
+        <h2 id="trackTitle"></h2>
+        <p id="trackNum"></p>
     </Header>
     <div>
-        <h3></h3>
+        <p id="trackDesc"></p>
         <audio class="player" controls>
-            <source src="./music/A1.wav" type="audio/wav">
+            <source id="songFile" src="./music/01.mp3" type="audio/mp3">
         </audio>
     </div>
+    <footer>
+        <button id="nextPage">Next</button>
+    </footer>
 
 </body>
+<script src="guts.js"></script>
 </html>
