updated styles, added js, tracklist.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>BCC</title>
+    <title>Document</title>
 </head>
 <body>
     <Header>
         <h1>Lukasz Mauro . Sketches BCC</h1>
-        <h2 id="trackTitle"></h2>
-        <p id="trackNum"></p>
-    </Header>
-    <div>
-        <p id="trackDesc"></p>
+        <h2 id="nowPlaying">Hotmess</h2>
         <audio class="player" controls>
-            <source id="songFile" src="./music/01.mp3" type="audio/mp3">
+            <source src="./music/A1.wav" type="audio/wav">
         </audio>
+    </Header>
+    
+    <div id="trackList">
+        <span>Hotmess</span>
+        <span>Quarantine (but it's ok)</span>
+        <span>Amanda</span>
+        <span>Atmosphere Interlude</span>
+        <span>Stickyhold</span>
+        <span>Stargate (reprise)</span>
+        <span>Rap</span>
+        <span>Dare2bare</span>
+        <span>Almostinato</span>
+        <span>27th&girard</span>
+        <span>5d</span>
+        <span>Probably wrong</span>
+        <span>Dr. Balachander</span>
+        <span>Boc Interlude</span>
+        <span>Toothpicks</span>
+        <span>Pilotdrone</span>
+        <span>Faultline</span>
     </div>
-    <footer>
-        <button id="nextPage">Next</button>
-    </footer>
 
 </body>
-<script src="guts.js"></script>
 </html>
+
+<script src="scripts.js"></script>
