added tracklist generation from js.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </Header>
     
     <div id="trackList">
-        <span>Hotmess</span>
+        <!-- <span>Hotmess</span>
         <span>Quarantine (but it's ok)</span>
         <span>Amanda</span>
         <span>Atmosphere Interlude</span>
@@ -33,7 +33,7 @@
         <span>Boc Interlude</span>
         <span>Toothpicks</span>
         <span>Pilotdrone</span>
-        <span>Faultline</span>
+        <span>Faultline</span> -->
     </div>
 
 </body>
