added more to song selecting functions. visible selected track, active tracks title is displayed.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span>27th&girard</span>
         <span>5d</span>
         <span>Probably wrong</span>
-        <span>Dr. Balachander</span>
+        <span>Dr. Balachander</span>s
         <span>Boc Interlude</span>
         <span>Toothpicks</span>
         <span>Pilotdrone</span>
