--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <audio class="player" controls>
             <source src="./music/A1.wav" type="audio/wav">
         </audio>
-        <h2 id="nowPlaying">Hotmess</h2>
+        <h2 id="nowPlaying"></h2>
     </Header>
     
     <div id="trackList">
