re-did list style. added more template.

--- a/index.html
+++ b/index.html
@@ -13,28 +13,10 @@
         <audio class="player" controls>
             <source src="./music/A1.wav" type="audio/wav">
         </audio>
-        <h2 id="nowPlaying"></h2>
     </Header>
     
-    <div id="trackList">
-        <!-- <span>Hotmess</span>
-        <span>Quarantine (but it's ok)</span>
-        <span>Amanda</span>
-        <span>Atmosphere Interlude</span>
-        <span>Stickyhold</span>
-        <span>Stargate (reprise)</span>
-        <span>Rap</span>
-        <span>Dare2bare</span>
-        <span>Almostinato</span>
-        <span>27th&girard</span>
-        <span>5d</span>
-        <span>Probably wrong</span>
-        <span>Dr. Balachander</span>s
-        <span>Boc Interlude</span>
-        <span>Toothpicks</span>
-        <span>Pilotdrone</span>
-        <span>Faultline</span> -->
-    </div>
+    <section id="disco"></section>
+    
 
 </body>
 </html>
