re-factored apended elements, styles.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="icon" href="sketches.jpg">
+    <title>Sketches</title>
 </head>
+
 <body>
     <Header>
         <h1>Lukasz Mauro . Sketches BCC</h1>
