added track changer functionality.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
     <Header>
-        <h1>Lukasz Mauro . Sketches BCC</h1>
+        <h1>Sketches</h1>
         <audio class="player" controls>
-            <source src="./music/A1.wav" type="audio/wav">
+            <source src="" type="audio/wav">
         </audio>
     </Header>
+
+    <section id="nowPlaying"></section>
     
     <section id="disco"></section>
     
