added now playing display and source swap, music file organization.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
     <Header>
         <h1>Sketches</h1>
         <audio class="player" controls>
-            <source src="" type="audio/wav">
+            <source src="/music/amanda-alarm.mp3" type="audio/mp3">
         </audio>
     </Header>
 
-    <section id="nowPlaying"></section>
+    <section id="nowPlaying">
+        <img id="albumPic" src="">
+        <article>
+            <h1 id="artistName">Lukasz Mauro</h1>
+            <h2 id="trackName"></h2>
+            <span id="trackTime"></span>
+            <h3 id="albumName"></h3>
+        </article>
+    </section>
     
     <section id="disco"></section>
     
