removed lossless files from repo. working on song class to handle a song queue.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <article id="queueDropdown">
             <p>Queued up</p>
-            <div id="queuedList">
+            <div id="queueList">
 
             </div>
         </article>
