added local storage queue system, no cycle yet.

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <article id="playingDropdown">
             <button id="playingDropdownButton">Playing now</button>
             <div id="nowPlaying" class="menu-flex">
-                <img id="albumPic" src="https://picsum.photos/200/199">
+                <img id="albumPic" src="">
                 <article>
-                    <h2 id="artistName">Lukasz Mauro</h1>
-                        <h3 id="trackName">Almostinato
+                    <h2 id="artistName"></h1>
+                        <h3 id="trackName">
                     </h2>
-                    <h5 id="albumName">sketches bcc</h3>
+                    <h5 id="albumName">No track queued!</h3>
                 </article>
             </div>
         </article>
 
         <article id="queueDropdown">
-            <p>Queued up</p>
-            <div id="queueList">
+            <button id="qButton">Queued up</button>
+            <div id="queueList" class="menu-flex">
 
             </div>
         </article>
