--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <Header>
         <h1>Sketches</h1>
         <audio class="player" controls>
-            <source src="/music/amanda-alarm.mp3" type="audio/mp3">
+            <source src="" type="audio/mp3">
         </audio>
 
         <article id="playingDropdown">
@@ -32,6 +32,7 @@
 
         <article id="queueDropdown">
             <button id="qButton">Queued up</button>
+            <button id="nextTrack">next</button>
             <div id="queueList" class="menu-flex">
 
             </div>
