few small changes. changed tracklists to buttons to prevent refresh, added more functionallity for queue and now-up. added random time function. few display/css changes too.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="sketches.jpg">
-    <title>Sketches</title>
+    <title>Sketches </title>
 </head>
 
 <body>
     <Header>
-        <h1>Sketches</h1>
+        <h1>'Sum Sketches</h1>
         <audio class="player" controls>
             <source src="" type="audio/mp3">
         </audio>
@@ -20,7 +20,7 @@
         <article id="playingDropdown">
             <button id="playingDropdownButton">Playing now</button>
             <div id="nowPlaying" class="menu-flex">
-                <img id="albumPic" src="">
+                <img id="albumPic" src="https://picsum.photos/25">
                 <article>
                     <h2 id="artistName"></h1>
                         <h3 id="trackName">
