--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="sketches.jpg">
+    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="icon" href="https://forestw70.github.io/bcc/assets/images/sketches.jpg">
     <title>Sketches </title>
 </head>
 
@@ -32,7 +32,7 @@
 
         <article id="queueDropdown">
             <button id="qButton">Queued up</button>
-            <button id="nextTrack">next</button>
+            <button id="nextTrack">Next track</button>
             <div id="queueList" class="menu-flex">
 
             </div>
@@ -47,4 +47,4 @@
 
 </html>
 
-<script src="scripts.js"></script>
+<script src="assets/scripts/scripts.js"></script>
