--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <Header>
         <h1>'Sum Sketches</h1>
-        <audio class="player" controls>
+        <audio id="player" controls>
             <source src="" type="audio/mp3">
         </audio>
 
