started creating song view, big list

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         </article>
     </Header>
 
+    <section id="controlers">
+        <button type="button" id="viewAlbums">
+            Show Albums View
+        </button>
+        <button type="button" id="viewSongs">
+            Show Songs View
+        </button>
+    </section>
 
     <section id="disco"></section>
 
