refactoring some of the classes, view functionallity. moving more towards an OOP system.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
         </article>
 
-        <article id="queueDropdown">
-            <button id="qButton">Queued up</button>
+        <article id="playingDropdownButton">
+            <button id="toggleShowQueue">Queued up</button>
             <button id="nextTrack">Next track</button>
             <div id="queueList" class="menu-flex">
 
@@ -50,16 +50,18 @@
     </section>
 
     <section id="disco">
+    </section>
+
+    <section id="list">
         <div class="song-list-row show" id="headerRow">
             <span data-sort-by="trkNum">Track Number</span>
-            <span data-sort-by="trkNme">Song</span><span data-sort-by="trkUrl">Song Url</span>
+            <span data-sort-by="trkNme">Song</span>
+            <span data-sort-by="trkUrl">Song Url</span>
             <span data-sort-by="epTtl">Album Title</span>
             <span data-sort-by="trkLen">Length</span>
             <span data-sort-by="og">Some Path</span>
         </div>
-        <section id="list"></section>
     </section>
-
     <!-- <section id="list">
         <div class="song-list-row" id="headerRow">
             <span data-sort-by="trkNum">Track Number</span>
