more asthetic changes

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
                 <div id="queueList" class="menu-flex"></div>
             </article>
         </div>
-        <div class="progress">
+        <!-- <div class="progress">
             
-        </div>
+        </div> -->
     </Header>
 
     <section id="controlers">
         <button type="button" id="viewAlbums">
-            Show Albums View
+            Album View
         </button>
         <button type="button" id="viewSongs">
-            Show Songs View
+            Song View
         </button>
     </section>
 
