added extra rows of data for ep obj, minor style changes. display more info.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </Header>
 
     <section id="controlers">
-        <button type="button" id="viewAlbums">
+        <button type="button" id="viewAlbums" class="view-button curr-view">
             Album View
         </button>
-        <button type="button" id="viewSongs">
+        <button type="button" id="viewSongs" class="view-button">
             Song View
         </button>
     </section>
