created more responsive audio controler. general upgrade.

--- a/index.html
+++ b/index.html
@@ -36,14 +36,19 @@
                         <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
                     </button>
                     <button type="button" class="show-queue" id="toggleShowQueue">
-                        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                        <span id="sq" class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
                     </button>
-                    <button type="button" class="show-queue" id="testBtn">
+                    <!-- <button type="button" class="show-queue" id="testBtn">
                         <span class="glyphicon" aria-hidden="true">TEST</span>
-                    </button>
+                    </button> -->
                 </div>
             </article>
             <article id="qTools">
+                <div class="option-buttons">
+                    <button class="opt-default" type="button" id="autoPlayOption">
+                        ~epirimental~ autoplay -- OFF -- Turn on?
+                    </button>
+                </div>
                 <div id="queueList" class="menu-flex"></div>
             </article>
         </div>
