tuned the player some more, adjusted some styles. added back to top button.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
         <button type="button" id="viewSongs" class="view-button">
             Song View
         </button>
+        <button id="returnToTop" type="button">
+            Back to top ^
+        </button>
     </section>
-
+    
     <section id="disco">
     </section>
 
@@ -77,6 +80,8 @@
             <span data-sort-by="og">Some Path</span>
         </div> -->
     </section>
+
+    
 </body>
 
 </html>
