refactored list view sorting functionality, changed how I display specific view's elements. less javascreipt rendering.

--- a/index.html
+++ b/index.html
@@ -76,20 +76,25 @@
     <section id="disco">
     </section>
 
-    <section id="list">
-        <!-- currently being appended from js -->
-        <!-- <div class="song-list-row" id="headerRow">
-            <span data-sort-by="trkNum">Track Number</span>
+    <section id="list" class="hide">
+        <div class="song-list-row" id="headerRow">
+            <span data-sort-by="trkNum">#</span>
             <span data-sort-by="trkNme">Song</span>
-            <span data-sort-by="trkUrl">Song Url</span>
-            <span data-sort-by="epTtl">Album Title</span>
             <span data-sort-by="trkLen">Length</span>
-            <span data-sort-by="og">Some Path</span>
-        </div> -->
+            <span data-sort-by="epTtl">Ep</span>
+            <span data-sort-by="artist">Artist</span>
+            <span data-sort-by="trkUrl">Song Url</span>
+            <span data-sort-by="trkOg">File</span>
+            <span data-sort-by="trkDte">Date</span>
+            <span data-sort-by="trkTs">Timestamp</span>
+        </div>
+        <div id="listDump">
+
+        </div>
     </section>
 
-    <section id="options">
-        
+    <section id="options" class="hide">
+        <span>OOoooOOOoOOOOOOooOOOO</span>
     </section>
 
     
