tuned styles for queue-modal. added buttons to add songs to up next in queue. blocks duplicate songs from being in queue.

--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 
     <section id="qPrompt">
         <div class="modal-cont">
+            <button type="button" id="closeModal">x</button>
             <span id="modalSong"></span>
             <span id="modalDump">
 
             </span>
-            <button type="button" id="closeModal">close box</button>
+            <button type="button" id="upNextBtn">add to up next?</button>
             <button type="button" id="removeThisSong">remove from queue?</button>
         </div>
     </section>
