added modal view for curent song as well. some mobile css changes. small button functionality changes.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </button> -->
                 </div>
             </article>
-            <span class="queue-tip">queue:</span>
+            <span class="queue-tip" id="qTip">Queue:</span>
             <article id="qTools">
                 
                 <div id="queueList" class="menu-flex"></div>
