--- a/index.html
+++ b/index.html
@@ -90,12 +90,59 @@
     </section>
 
     <section id="options" class="hide">
-        <span>OOoooOOOoOOOOOOooOOOO</span>
         <div class="option-buttons">
             <button class="opt-default" type="button" id="autoPlayOption">
                 ~expirimental autoplay~ -- OFF.  Turn on?
             </button>
         </div>
+        <div class="wall-o-text">
+            <p>Welcome to the Sketches player, where you can listen to and have access to much of the Burner Records music catalog, for free.</p>
+            <p>~Currently in alpha~</p>
+            <div class="tutorial">
+                <p>here are some of the things you can do:</p>
+                <ul>
+                    <li>Choose between album or song view to browse the catalog's many songs</li>
+                    <li>In song view, you may click each of the colomn header to sort the song list by that criteria back and forth. Some logic issues persist.</li>
+                    <li>Click on a song-row to load it into the audio player, use either of the play buttons to start listening</li>
+                    <li>Keep browsing and add any song you'd like to listen too, if a song is already playing, the songs will be added to the queue.</li>
+                    <li>Click the next track button when you want to move on to the next track.</li>
+                    <li>*You may turn on auto-play above, however on mobile it does not always work.*</li>
+                    <li>You can click on the current track playing to see a JSON display of the song's data.</li>
+                    <li>If you click on a queue item, you will be shown a similar JSON object, with the options of adding the song to up next, or remove the song from your queue.</li>
+                    <li>Queue can be shown and hidden</li>
+                    <li>You may use audio element's controls to change song playback speed faster or slower.</li>
+                    <li>You can also use these controls to download any track. just dont forget where you got them and to show some love on the other channels ;)</li>
+                </ul>
+            </div>
+            <p>Have fun and enjoy these many frequencies, It'll only go up from here ☻</p>
+            <div class="credits">
+                <span>music from:</span>
+                <h2>Lukasz Mauro</h2>
+                <h2>Stud Finder</h2>
+                <h2>con</h2>
+                <h2>Dj Burna B</h2>
+                <span>Direction from:</span>
+                <h3>Barney Bozisnky</h3>
+                <h3>Lukasz Mauro</h3>
+                <h3>Forest Wilson</h3>
+                <span>Developed by:</span>
+                <h4>Forest Wilson</h4>
+                <span>With various samples from:</span>
+                <h5>Boards of canada</h5>
+                <h5>Aphex Twin</h5>
+                <h5>Broadcast</h5>
+                <h5>Animal Collective</h5>
+                <h5>Vashti Bunyan</h5>
+                <h5>Gescom</h5>
+                <h5>The Kit-Kats</h5>
+                <h5>Jai Paul</h5>
+                <h5>The Microphones</h5>
+                <h5>Pye Corner Audio</h5>
+            </div>
+            <h6>itsjustaburner ☼ 2022</h6>
+            <a href="https://soundcloud.com/itsjustaburner">Soundcloud</a>
+        </div>
+        
     </section>
 
     <section id="qPrompt">
