updated readme, small style and display fixes.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </Header>
 
     <section id="controlers">
-        <button type="button" id="viewAlbums" class="view-button curr-view">
+        <button type="button" id="viewAlbums" class="view-button">
             Album View
         </button>
         <button type="button" id="viewSongs" class="view-button">
