--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 <h5>The Microphones</h5>
                 <h5>Pye Corner Audio</h5>
             </div>
-            <h6>itsjustaburner ☼ 2022</h6>
-            <a href="https://soundcloud.com/itsjustaburner">Soundcloud</a>
+            <h6><a href="https://www.burnthis.space">itsjustaburner</a> ☼ <a href="https://soundcloud.com/itsjustaburner">Soundcloud</a> ☼ <a href="https://itsjustaburner.bandcamp.com/music">BandCamp</a> ☼ 2022</h6>
+            
         </div>
         
     </section>
