--- a/index.html
+++ b/index.html
@@ -173,4 +173,4 @@
 
 </html>
 
-<script type="module" src="assets/js/index.js"></script>
+<script type="module" src="assets/js/scripts.js"></script>
