split up css into a few files to be easier to read. updated readme and options view.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles/player.css">
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/modal.css">
     <link rel="icon" href="https://forestw70.github.io/sketches-bcc-client/assets/images/sketches.jpg">
-    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet"> -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <title>Sketches </title>
 </head>
@@ -69,6 +70,7 @@
         </button>
     </section>
     
+    <!-- VIEWS -->
     <section id="disco">
     </section>
 
@@ -107,7 +109,7 @@
                     <li>Click on a song-row to load it into the audio player, use either of the play buttons to start listening</li>
                     <li>Keep browsing and add any song you'd like to listen too, if a song is already playing, the songs will be added to the queue.</li>
                     <li>Click the next track button when you want to move on to the next track.</li>
-                    <li>*You may turn on auto-play above, however on mobile it does not always work.*</li>
+                    <li>*You may turn on auto-play above, however on mobile it only works when viewing the page.*</li>
                     <li>You can click on the current track playing to see a JSON display of the song's data.</li>
                     <li>If you click on a queue item, you will be shown a similar JSON object, with the options of adding the song to up next, or remove the song from your queue.</li>
                     <li>Queue can be shown and hidden</li>
@@ -156,6 +158,7 @@
         
     </section>
 
+    <!-- SONG INFO MODAL -->
     <section id="qPrompt">
         <div class="modal-cont">
             <button type="button" id="closeModal">x</button>
