added some eggs. js refactoring.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p>here are some of the things you can do:</p>
                 <ul>
                     <li>Choose between album or song view to browse the catalog's many songs</li>
-                    <li>In song view, you may click each of the colomn header to sort the song list by that criteria back and forth. Some logic issues persist.</li>
+                    <li>In song view, you may click each of the colomn header to sort the song list by that criteria back and forth.</li>
                     <li>Click on a song-row to load it into the audio player, use either of the play buttons to start listening</li>
                     <li>Keep browsing and add any song you'd like to listen too, if a song is already playing, the songs will be added to the queue.</li>
                     <li>Click the next track button when you want to move on to the next track.</li>
@@ -115,6 +115,7 @@
                     <li>Queue can be shown and hidden</li>
                     <li>You may use audio element's controls to change song playback speed faster or slower.</li>
                     <li>You can also use these controls to download any track. just dont forget where you got them and to show some love on the other channels ;)</li>
+                    <li>Remember, volume can be volitile so be kind to your ears. If you feel responisible enough, you can click <button type="button" id="addPods">HERE</button> to add new items to the track-pool after page refresh.</li>
                 </ul>
             </div>
             <p>Have fun and enjoy these many frequencies, It'll only go up from here ☻</p>
