addded a few button controls.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <h3>Forest Wilson</h3>
 
                 <span>Art from:</span>
-                <h4>Mae K.</h4>
-                <h4>Aarin W.</h4>
+                <button id="maesButton"><h4>Mae K.</h4></button>
+                <button id="aarinsButton"><h4>Aarin W.</h4></button>
 
                 <span>Developed by:</span>
                 <h4>Forest Wilson</h4>
@@ -144,7 +144,9 @@
                 <h5>Broadcast</h5>
                 <h5>Animal Collective</h5>
                 <h5>Vashti Bunyan</h5>
+                <h5>Sophie</h5>
                 <h5>Gescom</h5>
+                <h5>GY!BE</h5>
                 <h5>The Kit-Kats</h5>
                 <h5>Jai Paul</h5>
                 <h5>The Microphones</h5>
