added more modular design to how the song pool gets populated, starts with only a few songs but you can use options to add more songs to pool. css and readme changes.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
     <section id="options" class="hide">
         <div class="option-buttons">
             <button class="opt-default" type="button" id="autoPlayOption">
-                ~expirimental autoplay~ -- OFF.
+                ~Autoplay~ -- OFF.
+            </button>
+            <button class="opt-default" type="button" id="extrasOption">
+                ~Extra tracks~ -- OFF.
             </button>
         </div>
         <div class="wall-o-text">
@@ -115,7 +118,7 @@
                     <li>Queue can be shown and hidden</li>
                     <li>You may use audio element's controls to change song playback speed faster or slower.</li>
                     <li>You can also use these controls to download any track. just dont forget where you got them and to show some love on the other channels ;)</li>
-                    <li>Remember, volume can be volitile so be kind to your ears. If you feel responisible enough, you can click <button type="button" id="addPods">HERE</button> to add new items to the track-pool after page refresh.</li>
+                    <li>Remember, volume can be volitile so be kind to your ears. If you feel responisible enough, you can click <button type="button" id="addPods">HERE</button> or elsewere on the site to add new items to the track-pool after page refresh.</li>
                 </ul>
             </div>
             <p>Have fun and enjoy these many frequencies, It'll only go up from here ☻</p>
@@ -132,8 +135,8 @@
                 <h3>Forest Wilson</h3>
 
                 <span>Art from:</span>
-                <button id="maesButton"><h4>Mae K.</h4></button>
-                <button id="aarinsButton"><h4>Aarin W.</h4></button>
+                <h4 id="maesButton">Mae K.</h4>
+                <h4 d="aarinsButton">Aarin W.</h4>
 
                 <span>Developed by:</span>
                 <h4>Forest Wilson</h4>
