style changes to player and queue.

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
                     <button type="button" id="nextTrack" class="next-song">
                         <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
                     </button>
-                    <button type="button" class="show-queue" id="toggleShowQueue">
-                        <span id="sq" class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-                    </button>
+                    
                 </div>
             </article>
             <span class="queue-tip" id="qTip">Queue:</span>
             <article id="qTools">
-                
+                <button type="button" class="show-queue" id="toggleShowQueue">
+                    <span id="sq" class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                </button>
                 <div id="queueList" class="menu-flex"></div>
+                <div id="altText" class="command">
+                    <span>Wieners</span>
+                </div>
             </article>
         </div>
     </Header>
